--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -188,7 +188,7 @@
                     <th>Location</th>
                     <th>Description</th>
                     <th>Date Opened</th>
-                    <th class="text-center">Manage</th>
+<th class="text-center"></th>
                 </tr>
             </thead>
             <tbody id="partnerOpenExpressionsOfInterestData">
