--- a/web/src/main/resources/templates/partner/edit-position.html
+++ b/web/src/main/resources/templates/partner/edit-position.html
@@ -20,9 +20,9 @@
                     </ol>
                 </nav>
 
-                <h1 class="text-center m-3" th:text="'Edit ' + ${positionType}">Title</h1>
+                <h1 class="text-center m-3" th:text="'Edit ' + ${type}">Title</h1>
                 <!-- Edit position forms -->
-                <div th:replace="fragments/position-forms  :: edit-job-form"></div>
+<!--                <div th:replace="fragments/position-forms  :: edit-job-form"></div>-->
                 <div th:replace="fragments/position-forms  :: edit-placement-form"></div>
             </div>
         </div>
