Create Contact Us form UI

--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -3,7 +3,7 @@
 <div th:fragment="pending-expressions-of-interest" id="pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><h1 class="table-heading">Pending Expressions Of Interest</h1></div>
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><h1 class="table-heading">Pending</h1></div>
         <div class="col-12 col-md-6 col-lg-6 col-xl-6"><input class="form-control" id="pendingAcceptanceFilter" type="text" name="keyword" placeholder="Filter Expressions of Interest..." /> </div>
         <div class="col-12 col-md-4 col-lg-4 col-xl-3"><button class="form-button center">+ New Expression of Interest</button></div>
         <div class="col-md-1 col-xl-3"></div>
@@ -60,7 +60,7 @@
 
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Pending Requests To Supply Services</h1>
+            <h1 class="table-heading">Pending</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
             <input class="form-control" id="pendingRTSFilter" type="text" name="keyword" placeholder="Filter Pending Requests to Supply..." /></div>
@@ -118,7 +118,7 @@
 
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Accepted Requests To Supply Services</h1>
+            <h1 class="table-heading">Accepted</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
             <input class="form-control" id="acceptedRTSFilter" type="text" name="keyword" placeholder="Filter Accepted Requests to Supply..." /></div>
@@ -174,7 +174,7 @@
 <div th:fragment="partner-pending-expressions-of-interest" id="pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><h1 class="table-heading">Open Expressions Of Interest</h1></div>
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><h1 class="table-heading">Pending</h1></div>
         <div class="col-12 col-md-6 col-lg-6 col-xl-6"><input class="form-control" id="pendingEOIFilter" type="text" name="keyword" placeholder="Filter Expressions of Interest..." /> </div>
         <div class="col-md-1 col-xl-3"></div>
     </div>
@@ -188,7 +188,7 @@
                     <th>Location</th>
                     <th>Description</th>
                     <th>Date Opened</th>
-<th class="text-center"></th>
+                    <th class="text-center"></th>
                 </tr>
             </thead>
             <tbody id="partnerOpenExpressionsOfInterestData">
@@ -229,7 +229,7 @@
 
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Your Pending Requests To Supply</h1>
+            <h1 class="table-heading">Pending</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
             <input class="form-control" id="partnerFilter" type="text" name="keyword" placeholder="Filter Pending Requests to Supply..." /></div>
@@ -286,7 +286,7 @@
 
     <div class="row">
         <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Your Accepted Requests To Supply History</h1>
+            <h1 class="table-heading">History</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
             <input class="form-control" id="rtsHistoryFilter" type="text" name="keyword" placeholder="Filter Requests to Supply History..." /></div>
