--- a/web/src/main/resources/templates/fragments/educatorForm.html
+++ b/web/src/main/resources/templates/fragments/educatorForm.html
@@ -4,7 +4,7 @@
     <div class="w-50 mx-auto">
         <form
                 id="educator-form"
-                class="row g-3 border form-border mt-3"
+                class="row g-3 form-border mt-3"
                 th:action="@{/register}"
                 method="post">
             <div class="form-icon center mt-3">
@@ -54,7 +54,7 @@
                 </select>
             </div>
             <div class="col-md-2 ms-5 m-3">
-                <label for="staffId" class="form-label">CQU Educator ID</label>
+                <label for="staffId" class="form-label">CQU Staff ID</label>
                 <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
             </div>
             <div class="form-group mb-3 text-center">
