--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -49,7 +49,7 @@
   <div class="row p-3 pt-0">
     <div class="form-group col">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="filledCheck">
+        <input class="form-check-input" type="checkbox" id="filledCheck" th:field="*{filled}">
         <label class="form-check-label" for="filledCheck">
           Filled
         </label>
@@ -57,7 +57,7 @@
     </div>
     <div class="form-group col">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="approvedCheck">
+        <input class="form-check-input" type="checkbox" id="approvedCheck" th:field="*{approved}">
         <label class="form-check-label" for="approvedCheck">
           Approved
         </label>
@@ -71,7 +71,7 @@
   <div class="row p-3 pt-0">
     <div class="form-group col">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="completedCheck">
+        <input class="form-check-input" type="checkbox" id="completedCheck" th:field="*{completed}">
         <label class="form-check-label" for="completedCheck">
           Completed
         </label>
@@ -117,7 +117,7 @@
 
 <!-- Form for editing a placement -->
 <div th:fragment="edit-placement-form" xmlns:th="http://www.thymeleaf.org" id="edit-placement-form">
-  <form th:action="@{update-placement}" th:object="${placement}" method="post">
+  <form th:action="@{~/partner/update-placement?id={pid}( pid=${id} )}" th:object="${placement}" method="post">
     <div th:replace="fragments/position-forms  :: position-form"></div>
     <div th:replace="fragments/position-forms  :: edit-position-fields"></div>
     <div th:replace="fragments/position-forms  :: edit-placement-field"></div>
