--- a/web/src/main/resources/templates/fragments/position-forms.html
+++ b/web/src/main/resources/templates/fragments/position-forms.html
@@ -107,7 +107,7 @@
 
 <!-- Form for editing job -->
 <div th:fragment="edit-job-form" xmlns:th="http://www.thymeleaf.org" id="edit-job-form">
-  <form th:action="@{update-placement}" th:object="${job}" method="post">
+  <form th:action="@{~/partner/update-job?id={jid}( jid=${id} )}" th:object="${job}" method="post">
     <div th:replace="fragments/position-forms  :: position-form"></div>
     <div th:replace="fragments/position-forms  :: job-form"></div>
     <div th:replace="fragments/position-forms  :: edit-position-fields"></div>
