--- a/web/src/main/resources/templates/fragments/navigation.html
+++ b/web/src/main/resources/templates/fragments/navigation.html
@@ -33,7 +33,7 @@
 <div th:fragment="sidebar" class="border-end bg-white" id="sidebar-wrapper" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <div class="sidebar-heading border-bottom navbar-light bg-light">
         <a class="navbar-brand" sec:authorize="isAuthenticated()">Hi <span sec:authentication="name"></span>!</a>
-        <a class="navbar-brand" sec:authorize="isAnonymous()">Hi Developer</a>
+        <a class="navbar-brand" sec:authorize="isAnonymous()">Anonymous user</a>
     </div>
     <!-- Sidebar Menu Items -->
     <div class="list-group list-group-flush">
