Fix exceptions and filter search for students and their marketplace tables

--- a/web/src/main/resources/templates/student/marketplace.html
+++ b/web/src/main/resources/templates/student/marketplace.html
@@ -4,7 +4,7 @@
 <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
 <link th:href="@{~/css/forum.css}" rel="stylesheet" />
 <script type="text/javascript" th:src="@{~/js/multiselect-dropdown.js}"></script>
-<body onload="hidePositionsPendingTableIfEmpty()">
+<body>
 <!-- Top Navigation Bar -->
 <div th:replace="fragments/navigation :: top-navigation"></div>
 
