--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -116,7 +116,9 @@
     </div>
 
 </div>
-<!-- current (approved) jobs & placements for students-->
+
+
+<!-- [x] current (approved) jobs & placements for students-->
 <div th:fragment="approvedStudent" id="approvedStudent" xmlns:th="http://www.thymeleaf.org">
 
     <div class="row">
@@ -124,57 +126,97 @@
             <h1 class="table-heading">Current</h1>
         </div>
         <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="approvedStudentFilter" type="text" name="keyword"
-                   placeholder="Filter Positions..."/></div>
+            <input class="form-control" id="filterApprovedStudent" type="text" name="keyword"
+                placeholder="Filter Positions..." />
+        </div>
         <div class="col-md-1 col-xl-3"></div>
     </div>
 
     <div class="row table-container">
         <table class="table table-striped table-hover">
             <thead>
-            <tr>
-                <th>ID</th>
-                <th>Type</th>
-                <th>Provider</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Description</th>
-                <th class="text-center">View Job & Placement Details</th>
-            </tr>
+                <tr>
+                    <th>ID</th>
+                    <th>Type</th>
+                    <th>Provider</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Description</th>
+                    <th class="text-center">View Job & Placement Details</th>
+                </tr>
             </thead>
-            <tbody id="approvedStudentPositionsData">
-            <tr th:each="pos : ${approvedPositions}">
-                <th scope="row" th:text="${pos.id}"></th>
-                <td th:text="${pos.type}">Job</td>
-                <td th:text="${pos.partner.businessName}">Microsoft</td>
-                <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                <td th:text="${pos.description}">Just a one month job</td>
-                <td style="display: flex;">
-                    <div class="mx-auto">
-                        <!-- Pass the position type and id in the link so the details can be displayed -->
-                        <a th:if="${pos.type == 'Placement'}" class='btn btn-primary'
-                              th:href="@{marketplace-details?type=placement&id={posId} (posId=${pos.id})}">View Placement</a>
-                        <a th:if="${pos.type == 'Job'}" class='btn btn-primary'
-                              th:href="@{marketplace-details?type=job&id={posId} (posId=${pos.id})}">View Job</a>
-                    </div>
-                </td>
-            </tr>
+            <tbody id="approvedStudentData">
+                <tr th:each="pos : ${allPositions}">
+                    <th scope="row" th:text="${pos.id}"></th>
+                    <td th:text="${pos.type}">Job</td>
+                    <td th:text="${pos.partner.businessName}">Microsoft</td>
+                    <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                    <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                    <td th:text="${pos.description}">Just a one month job</td>
+                    <td style="display: flex;">
+                        <div class="mx-auto">
+                            <!-- Pass the position type and id in the link so the details can be displayed -->
+                            <a th:if="${#strings.toLowerCase(pos.type) == 'placement'}" class='btn btn-primary'
+                                th:href="@{marketplace-details?type=placement&id={posId} (posId=${pos.id})}">View
+                                Placement</a>
+                            <a th:if="${#strings.toLowerCase(pos.type) == 'job'}" class='btn btn-primary'
+                                th:href="@{marketplace-details?type=job&id={posId} (posId=${pos.id})}">View Job</a>
+                        </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 
         <script th:inline="javascript">
             /*<![CDATA[*/
-            var positions =
-                /*[[${approvedPositions}]]*/
+            var approvedStudentDataList =
+                /*[[${allPositions}]]*/
                 /*]]>*/
-                $("#approvedStudentFilter").on("keyup", function () {
-                    var value = $(this).val();
-                    var table = document.getElementById("approvedStudentPositionsData");
-                    var filteredData = educatorFilterPositions(value, positions);
-                    rebuildEducatorPositionsTable(filteredData, table);
-                });
+            $("#filterApprovedStudent").on("keyup", function () {
 
+                var value = $(this).val();
+
+                let filteredData = [];
+                for (let i = 0; i < approvedStudentDataList.length; i++) {
+                    value = value.toLowerCase();
+                    let id = approvedStudentDataList[i].id;
+                    let type = approvedStudentDataList[i].type.toLowerCase();
+                    let partner = approvedStudentDataList[i].partner.businessName.toLowerCase();
+                    let startDate = formatDate(approvedStudentDataList[i].startDate);
+                    let endDate = formatDate(approvedStudentDataList[i].endDate);
+                    let description = approvedStudentDataList[i].description.toLowerCase();
+
+                    if (id == value || type.includes(value) || partner.includes(value) ||
+                        startDate.includes(value) || endDate.includes(value) || description.includes(value)) {
+                        filteredData.push(approvedStudentDataList[i]);
+                    }
+                }
+
+                var table = document.getElementById("approvedStudentData");
+                table.innerHTML = ``;
+                for (let i = 0; i < filteredData.length; i++) {
+                    let row = `<tr>
+                    <th scope="row">${filteredData[i].id}</th>
+                    <td>${filteredData[i].type}</td>
+                    <td>${filteredData[i].partner.businessName}</td>
+                    <td>${formatDate(filteredData[i].startDate)}</td>
+                    <td>${formatDate(filteredData[i].endDate)}</td>
+                    <td>${filteredData[i].description}</td>
+                    <td style="display: flex;">
+                        <div class="mx-auto">
+                            <!-- Pass the position type and id in the link so the details can be displayed -->
+                            ${
+                                filteredData[i].type.toLowerCase() == 'placement'? 
+                                `<a class="btn btn-primary" href="/student/marketplace-details?type=placement&id=${filteredData[i].id}">View Placement</a>` :
+                                `<a class="btn btn-primary" href="/student/marketplace-details?type=job&id=${filteredData[i].id}" > View Job</a >`
+                            }
+                            
+                        </div>
+                    </td>
+                    </tr>`;
+                    table.innerHTML += row;
+                }
+            });
         </script>
     </div>
 
