--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -1,5 +1,13 @@
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.bundle.min.js" integrity="sha512-9GacT4119eY3AcosfWtHMsT5JyZudrexyEVzTBWV3viP/YfB9e2pEy3N7WXL3SV6ASXpTU0vzzSxsbfsuUH4sQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script th:src="@{~/js/scripts.js}"></script>
+    <script>
+        const formatDate = (inputDate) => {
+            let date = new Date(inputDate);
+            let day = date.getDate();
+            let month = date.getMonth() + 1;
+            let year = date.getFullYear();
+            return [('0' + day).slice(-2), ('0' + month).slice(-2), year].join("/");
+        }
+    </script>
 </div>
