--- a/web/src/main/resources/templates/educator/marketplace.html
+++ b/web/src/main/resources/templates/educator/marketplace.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head"></head>
 <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
-<body onload="hidePositionsPendingTableIfEmpty()">
-<!-- Top Navigation Bar -->
-<div th:replace="fragments/navigation :: top-navigation"></div>
+<body>
+    <!-- Top Navigation Bar -->
+    <div th:replace="fragments/navigation :: top-navigation"></div>
 
     <div class="d-flex" id="wrapper">
         <!-- Sidebar Menu -->
@@ -25,12 +25,20 @@
                 <div th:replace="fragments/marketplace-tables :: pending-approval"></div>
 
                 <div th:replace="fragments/marketplace-tables :: approved"></div>
-                
+
             </div>
         </div>
     </div>
     <div th:replace="fragments/scripts"></div>
-
+    <script>
+        const formatDate = (inputDate) => {
+            let date = new Date(inputDate);
+            let day = date.getDate();
+            let month = date.getMonth() + 1;
+            let year = date.getFullYear();
+            return [('0' + day).slice(-2), ('0' + month).slice(-2), year].join("/");
+        }
+    </script>
 </body>
 
 </html>
