Remove redundant method call

--- a/web/src/main/resources/templates/partner/expressions-of-interest.html
+++ b/web/src/main/resources/templates/partner/expressions-of-interest.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/head"></head>
     <link th:href="@{~/css/portal-styles.css}" rel="stylesheet"/>
-    <body onload="hidePositionsPendingTableIfEmpty()">
+    <body>
     <!-- Top Navigation Bar-->
     <div th:replace="fragments/navigation :: top-navigation"></div>
     <body class="bg-dark bg-opacity-10">
